userChrome.css
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

#TabsToolbar > .toolbar-items,
#TabsToolbar > .titlebar-spacer {
    visibility: hidden
}

#nav-bar {
    margin-top: -42px;
    padding: 1px 145px 2px 3px !important;
}

